--- a/index.html
+++ b/index.html
@@ -71,5 +71,15 @@
         <button id="commander" class="p-2 rounded-2xl">Commander</button>
       </div>
     </div>
+
+    <!-- Formule de Payement -->
+    <!-- -->
+    <div
+      class="flex flex-col justify-center items-center h-11/12 w-11/12 border"
+    >
+      <h1>paiement</h1>
+      <hr />
+      <h2>nom</h2>
+    </div>
   </body>
 </html>
