--- a/index.html
+++ b/index.html
@@ -75,11 +75,32 @@
     <!-- Formule de Payement -->
     <!-- -->
     <div
-      class="flex flex-col justify-center items-center h-11/12 w-11/12 border"
+      class="paiment flex flex-col justify-center items-center h-11/12 w-11/12 border"
     >
-      <h1>paiement</h1>
+      <h1>Paiement</h1>
       <hr />
-      <h2>nom</h2>
+      <h2>Nom</h2>
+      <div class="flex justify-around">
+        <input type="text" />
+        <input type="password" />
+      </div>
+      <h2>Email</h2>
+      <div class="flex justify-around">
+        <input type="email" class="in-email w-5/6" />
+      </div>
+      <h2>Adresse</h2>
+      <div class="adress">
+        <input type="text" />
+        <input type="text" />
+        <input type="text" />
+        <input type="text" />
+        <input type="text" />
+      </div>
+      <h3>Method de paiement</h3>
+      <input type="radio" name="pay" id="" />
+      <label for="">Carte debit/credit</label>
+      <input type="radio" name="pay" id="" />
+      <img src="images/image 1.png" alt="" />
     </div>
   </body>
 </html>
