--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="../css/detail.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-
 <body>
   <header class="bg-[#0F172A] text-white flex items-center justify-between px-6 py-4">
     <div class="flex items-center space-x-2">
@@ -53,38 +52,8 @@
       <h3 class="text-yellow-500">Plat Détaille</h3>
       <div class="w-10 h-[2px] bg-yellow-500"></div>
     </div>
-    <div>
-      <h3 class="text-2xl font-bold mb-6 text-center">Pizza Margherita Classica</h3>
-      <img src="/specialite.jpg" alt="Pizza Margherita" class="rounded-2xl shadow-md mx-auto mb-6 w-full max-w-md" />
-    </div>
-
-
-    <p class="text-gray-700 text-left leading-relaxed mb-6">
-      La Pizza Margherita Classica est une création faite avec des ingrédients
-      italiens traditionnels. Sa pâte légère et croustillante, accompagnée
-      d'une sauce tomate fraîche, de mozzarella fondante et de basilic frais,
-      offre une expérience gustative authentique.
-    </p>
-    <div>
-      <div>
-        <strong class="text-left">Ingrédients :</strong>
-        <ul class="text-left text-yellow-500 mb-6">
-          <li>tomate </li>
-          <li>mozzarella</li>
-          <li>huile d’olive</li>
-          <li>basilic</li>
-        </ul>
-      </div>
-      <div>
-
-      </div>
-    </div>
-    <div class="flex justify-center">
-      <button
-        class="bg-yellow-500 flex justify-center hover:bg-yellow-400 text-white ml-6 px-4 py-2 font-semibold space-x-2"><span>Ajouter
-          au Pannier</span>
-        <img src="../images/Shopping cart.png" alt="Shopping cart" class="w-5 h-5" /></button>
-    </div>
+  <div id="plat-content">
+  </div>
 
   </section>
 
