--- a/pages/Detailplat.html
+++ b/pages/Detailplat.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Restoran - Spécialité</title>
+  <meta name="description" content="Découvrez tous les détails de notre plat : ingrédients, saveurs et présentation soignée. Un régal préparé avec passion par Restoran pour éveiller vos papilles.">
+  <meta name="keywords" content="restaurant, food, menu, repas, Maroc, livraison, cuisine, Restoran, commande" />
+  <meta name="author" content="Sharks Squad" />
   <link rel="stylesheet" href="../css/detail.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
