complete mon page reste seulement footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/acceuil.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
 </head>
 
@@ -117,115 +118,15 @@
             </div>
         </section>
 
-        <section class="third-part">
+    <section class="third-part ">
+        <div class="menu-header">
+            <p class="menu-subtitle">Food Menu</p>
+            <h2 class="menu-title">Articles les plus populaires</h2>
+        </div>
 
-            <div class="menu-header">
-                <p class="menu-subtitle">Food Menu</p>
-                <h2 class="menu-title">Articles les plus populaires</h2>
-            </div>
+        <div id="menu-carousel-container"></div>
+    </section>
 
-            <div class="menu-section">
-                <div class="menu-category">
-                    <h2><i class="fa-solid fa-mug-saucer" style="color: #FEA116;"></i></h2>
-                    <p>Popular</p>
-                    <h3>Breakfast</h3>
-                </div>
-
-                <div class="menu-items">
-                    <div class="menu-card">
-                        <img src="/images/menu-1.jpg.png" alt="breakfast 1">
-                        <div class="menu-info">
-                            <h3>Chicken Burger</h3>
-                            <p class="price">$115</p>
-                        </div>
-                    </div>
-
-                    <div class="menu-card">
-                        <img src="/images/menu-2.jpg.png" alt="breakfast 2">
-                        <div class="menu-info">
-                            <h3>Chicken Burger</h3>
-                            <p class="price">$115</p>
-                        </div>
-                    </div>
-
-                    <div class="menu-card">
-                        <img src="/images/menu-3.jpg.png" alt="breakfast 3">
-                        <div class="menu-info">
-                            <h3>Chicken Burger</h3>
-                            <p class="price">$115</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="menu-section">
-                <div class="menu-category">
-                    <h2><i class="fa-solid fa-burger" style="color: #FEA116;"></i></h2>
-                    <p>Special</p>
-                    <h3>Launch</h3>
-                </div>
-
-                <div class="menu-items">
-                    <div class="menu-card">
-                        <img src="/images/menu-4.jpg.png" alt="launch 1">
-                        <div class="menu-info">
-                            <h3>Chicken Burger</h3>
-                            <p class="price">$115</p>
-                        </div>
-                    </div>
-
-                    <div class="menu-card">
-                        <img src="/images/menu-5.jpg.png" alt="launch 2">
-                        <div class="menu-info">
-                            <h3>Chicken Burger</h3>
-                            <p class="price">$115</p>
-                        </div>
-                    </div>
-
-                    <div class="menu-card">
-                        <img src="/images/menu-6.jpg.png" alt="launch 3">
-                        <div class="menu-info">
-                            <h3>Chicken Burger</h3>
-                            <p class="price">$115</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="menu-section">
-                <div class="menu-category">
-                    <h2><i class="fa-solid fa-utensils" style="color: #FEA116;"></i></h2>
-                    <p>Lovely</p>
-                    <h3>Dinner</h3>
-                </div>
-
-                <div class="menu-items">
-                    <div class="menu-card">
-                        <img src="/images/menu-7.jpg.png" alt="dinner 1">
-                        <div class="menu-info">
-                            <h3>Chicken Burger</h3>
-                            <p class="price">$115</p>
-                        </div>
-                    </div>
-
-                    <div class="menu-card">
-                        <img src="/images/menu-8.jpg.png" alt="dinner 2">
-                        <div class="menu-info">
-                            <h3>Chicken Burger</h3>
-                            <p class="price">$115</p>
-                        </div>
-                    </div>
-
-                    <div class="menu-card">
-                        <img src="/images/menu-9.jpg.png" alt="dinner 3">
-                        <div class="menu-info">
-                            <h3>Chicken Burger</h3>
-                            <p class="price">$115</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <section class="fourth-part">
             <div>
@@ -256,61 +157,17 @@
             </div>
         </section>
 
-        <section class="fifth-part">
-            <div class="testimonial-header">
-                <p>Testimonial</p>
-                <h2>Our Clients Say!!!</h2>
-            </div>
+    <section class="fifth-part">
+        <div class="testimonial-header">
+            <p>Testimonial</p>
+            <h2>Our Clients Say!!!</h2>
+        </div>
 
-            <div class="testimonials">
-                <div class="testimonial-card active">
-                    <i class="fa-solid fa-quote-left"></i>
-                    <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam.
-                    </p>
-                    <div class="client">
-                        <img src="/images/testimonial-2.jpg.png" alt="client 1">
-                        <div>
-                            <h3>Client Name</h3>
-                            <p>Profession</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonials">
-                <div class="testimonial-card ">
-                    <i class="fa-solid fa-quote-left"></i>
-                    <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam.
-                    </p>
-                    <div class="client">
-                        <img src="/images/testimonial-3.jpg.png" alt="client 1">
-                        <div>
-                            <h3>Client Name</h3>
-                            <p>Profession</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonials">
-                <div class="testimonial-card ">
-                    <i class="fa-solid fa-quote-left"></i>
-                    <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam.
-                    </p>
-                    <div class="client">
-                        <img src="/images/testimonial-4.jpg.png" alt="client 1">
-                        <div>
-                            <h3>Client Name</h3>
-                            <p>Profession</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div id="testimonial-container"></div>
 
-            <div class="pagination">
-                <span class="dot active"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-            </div>
-        </section>
+        <div class="pagination" id="testimonial-pagination"></div>
+    </section>
+
 
     </main>
 
@@ -393,7 +250,6 @@
 
     </footer>
 
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="/js/acceuil.js"></script>
 </body>
 
