--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                   readonly
                   type="number"
                   min="1"
-                  class="text-4xl plat-count"
+                  class="text-2xl flex justify-center items-center plat-count"
                 />
                 <button class="text-4xl increase">+</button>
               </div>
