--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a style="color: #FEA116;" href="index.html">Acceuil</a></li>
                     <li><a href="menu.html">Menu</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
+                    <li><a href="pages/Contact.html">Contact</a></li>
                 </ul>
                 <button onclick="panierOn()">Pannier<i class="fa-solid fa-cart-shopping"></i></button>
             </div>
@@ -315,7 +315,7 @@
       </div>
       <!-- Formule de Payement -->
       <div
-        class="paiment flex-col justify-between items-center h-11/12 w-11/12 border p-3 md:w-5/12"
+        class="paiment flex-col justify-between items-center h-11/12 w-11/12 border p-5 md:w-5/12"
       >
         <h1 class="text-5xl flex">
           <i class="fa-solid fa-utensils"></i> Paiement
@@ -353,9 +353,5 @@
     
     <script src="/js/acceuil.js"></script>
 
-<<<<<<< HEAD
-</html>
-=======
   </body>
 </html>
->>>>>>> 0ecb6378610a1677a91e7a164d79e9cde0827aac
