--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -86,47 +86,35 @@
         </section>
 
         <section class="py-16">
-            <div class=" mx-auto px-8">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                    <div class="map rounded-lg overflow-hidden shadow-lg h-full min-h-[400px]">
-                        <iframe title="location map du restaurant"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1726251.2952794593!2d-11.565707406250025!3d32.323013100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdac21f1ff9e80d5%3A0x9ee49d3b2705c59d!2zTCfDrmxvdCBDaMOidGFpbg!5e0!3m2!1sfr!2sma!4v1762720692590!5m2!1sfr!2sma"
-                            width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy">
-                        </iframe>
-                    </div>
+            <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
 
-                    <div class="form-container">
-                        <form action="" class="space-y-4">
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                                <div>
-                                    <label for="name user" class="sr-only">Enter your Name</label>
-                                    <input id="name" type="text" placeholder="Enter your Name"
-                                        class="w-full px-4 py-3 border border-gray-300 rounded font-medium focus:outline-none focus:border-yellow-400">
-                                </div>
-                                <div>
-                                    <label for="email" class="sr-only">Enter your Email</label>
-                                    <input id="email" type="email" placeholder="Enter your Email"
-                                        class="w-full px-4 py-3 border border-gray-300 rounded focus:outline-none font-medium focus:border-yellow-400">
-                                </div>
-                            </div>
+                <iframe class="w-full h-full min-h-[400px] rounded-lg shadow-lg" title="location map du restaurant"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1726251.2952794593!2d-11.565707406250025!3d32.323013100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdac21f1ff9e80d5%3A0x9ee49d3b2705c59d!2zTCfDrmxvdCBDaMOidGFpbg!5e0!3m2!1sfr!2sma!4v1762720692590!5m2!1sfr!2sma"
+                    style="border:0;" allowfullscreen loading="lazy">
+                </iframe>
+                <form class="space-y-4">
+                    <label for="name" class="cach">Enter your Name</label>
+                    <input id="name" type="text" placeholder="Enter your Name"
+                        class="w-full px-4 py-3 font-medium border rounded focus:outline-none focus:border-yellow-400">
 
-                            <div>
-                                <label for="phone" class="sr-only">Phone</label>
-                                <input id="phone" type="tel" placeholder="phone"
-                                    class="w-full px-4 py-3 border border-gray-300 font-medium rounded focus:outline-none focus:border-yellow-400">
-                            </div>
-                            <div>
-                                <label for="message" class="sr-only ">Message</label>
-                                <textarea id="message" placeholder="Message" rows="8"
-                                    class="w-full px-4 py-3 border border-gray-300 rounded font-medium focus:outline-none focus:border-yellow-400 resize-none"></textarea>
-                            </div>
-                            <button type="submit"
-                                class="w-full bg-yellow-400 text-white font-bold py-4 rounded hover:bg-yellow-500 transition duration-300">
-                                SEND MESSAGE
-                            </button>
-                        </form>
-                    </div>
-                </div>
+                    <label for="email" class="cach">Enter your Email</label>
+                    <input id="email" type="email" placeholder="Enter your Email"
+                        class="w-full px-4 py-3 font-medium border rounded focus:outline-none focus:border-yellow-400">
+
+                    <label for="phone" class="cach">Phone</label>
+                    <input id="phone" type="tel" placeholder="Phone"
+                        class="w-full px-4 py-3 font-medium border rounded focus:outline-none focus:border-yellow-400">
+
+                    <label for="message" class="cach">Message</label>
+                    <textarea id="message" placeholder="Message" rows="8"
+                        class="w-full px-4 py-3 font-medium border rounded focus:outline-none focus:border-yellow-400 resize-none">
+                    </textarea>
+
+                    <button type="submit"
+                        class="w-full bg-yellow-400 text-white font-bold py-4 rounded hover:bg-yellow-500">
+                        SEND MESSAGE
+                    </button>
+                </form>
             </div>
         </section>
     </main>
