finish the vailabile meals section

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -162,7 +162,12 @@
             </div>
         </div>
 
+        <!-- disponible plates -->
         <h2 class="text-black text-4x1 mt-5 text-center md:text-5xl font-extrabold mb-4">Plats Disponibles</h2> 
+
+        <!-- card  -->
+        <div id="disponible-card" class="grid grid-cols-1 sm:grid-cols-2 gap-6 p-4"></div>
+
     </section>
       <footer class="bg-[#0F172A] text-gray-300 py-12 px-6">
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10 border-b border-gray-700 pb-10">
