--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -53,9 +53,10 @@
                     <p class="text-white">Menu</p>
                 </div>
                 <input 
-                    type="text" 
-                    placeholder="search"
-                    class="w-full max-w-md bg-blue-950 text-white rounded-3xl py-2 px-6 placeholder:text-white focus:outline-none"></input>
+                  id="search-input"
+                  type="text" 
+                  placeholder="search"
+                  class="w-full max-w-md bg-blue-950 text-white rounded-3xl py-2 px-6 placeholder:text-white focus:outline-none">
             </div>
         </div>
     </header>
